--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
