--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "homepage": "https://kevkidev.github.io/front-react-social-network",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@types/react-dom": "^17.0.11",
+    "bootstrap-icons": "^1.8.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.13",
     "@types/react": "^17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
