--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bootstrap": "^5.1.9",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@types/react-dom": "^17.0.11",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -47,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/jquery": "^3.5.13",
     "@types/react": "^17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
