--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
+    "firebase": "^9.6.6",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
