--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/bootstrap": "^5.1.9",
     "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.22",
     "@types/react-dom": "^17.0.11",
     "bcryptjs": "^2.4.3",
@@ -17,6 +18,7 @@
     "bootstrap-icons": "^1.8.0",
     "firebase": "^9.6.6",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
