Fix eslint rules + clean code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,9 @@
     "types": []
   },
   "include": ["src"],
-  "exclude": ["**/node_modules", "**/.*/"]
+  "exclude": ["**/node_modules", "**/.*/"],
+  "rules": {
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"]
+  }
 }
