--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
     "firebase": "^9.6.6",
+    "isexe": "^2.0.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -31,10 +32,11 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "graph": "madge --extensions js,ts,tsx --image dependencies-graph.svg src/"
   },
   "eslintConfig": {
     "extends": [
@@ -64,6 +66,7 @@
     "eslint-config-prettier": "^8.4.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-no-comments": "^1.0.5",
@@ -73,6 +76,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
+    "madge": "^5.0.1",
     "prettier": "2.5.1",
     "sass": "^1.49.7"
   }
