--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "graph": "madge --extensions js,ts,tsx --image graph.svg src/"
   },
   "eslintConfig": {
     "extends": [
@@ -64,6 +65,7 @@
     "eslint-config-prettier": "^8.4.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-no-comments": "^1.0.5",
@@ -73,6 +75,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
+    "madge": "^5.0.1",
     "prettier": "2.5.1",
     "sass": "^1.49.7"
   }
