--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
     "firebase": "^9.6.6",
+    "isexe": "^2.0.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -31,7 +32,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
