--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jquery": "^3.5.13",
     "@types/react": "^17.0.39",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^7.32.0",
