--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && shx cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "graph": "madge --extensions js,ts,tsx --image dependencies-graph.svg src/"
@@ -82,6 +82,7 @@
     "gh-pages": "^3.2.3",
     "madge": "^5.0.1",
     "prettier": "2.5.1",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "shx": "^0.3.4"
   }
 }
